Material sobre oscilador harmônico, circuito RLC e Dirac

--- a/notas_laplace.tex
+++ b/notas_laplace.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{url}
 
 %opening
 \title{}
@@ -417,5 +418,191 @@ Dem: Seja $g(t)=\int_0^tf(\tau)d\tau$. Então $g'(t)=f(t)$. Aplicamos a propried
 % 
 % 
   
+  \chapter{Dia 25 de setembro}
+  \section{Oscilador harmônico - regime de amortecimento}
+  
+  Ver aula no 
+  \url{https://colab.research.google.com/drive/197QbUeLlV2GEulEhjyVfpBeNRngxLls3}
+  
+  \noindent Mais exemplos de PVI em:
+  \url{https://colab.research.google.com/drive/1MTC1GSOP_DLPYZusqohP9DcaWr_ab-UX}
+  
+  
+  \section{Delta de dirac}
+  Muitos fenômenos físicos exigem a representação de uma força muito grande em um intervalo de tempo muito pequeno, por exemplo:
+\begin{itemize}
+ \item um circuito elétrico recebe uma força eletromotriz grande em um curto intervalo de tempo.
+ \item um sistema massa-mola é atingido por uma martelo.
+ \item uma bola de futebol parada recebe um chute, ou seja, uma força quase instantânea, que a coloca em movimento.
+ \item um avião é atingido por um raio.
+\end{itemize}
+Para representar essa força, vamos tomar a função pulso unitário em um curto intervalo de tempo $[-\epsilon,\epsilon]$ em torno da origem, isto é, um pulso com integral unitária:
+\begin{equation}
+\delta_\epsilon(t)=\frac{1}{2\epsilon}\left(u(t+\epsilon)-u(t-\epsilon)\right)=\left\{\begin{array}{ll}0,&t<-\epsilon\\ \frac{1}{2\epsilon},&-\epsilon<t<\epsilon\\0,&t>\epsilon.\end{array}\right.
+\end{equation}
+Um pulso unitário em torno de $t=a$ é representado por
+\begin{equation}{\label{def_delta_dirac}}
+\delta_\epsilon(t-a)=\frac{1}{2\epsilon}\left(u(t-(a-\epsilon))-u(t-(a+\epsilon))\right)=\left\{\begin{array}{ll}0,&t<a-\epsilon\\ \frac{1}{2\epsilon},&a-\epsilon<t<a+\epsilon\\0,&t>a+\epsilon.\end{array}\right.
+\end{equation}
+Observe que $\int_{-\infty}^\infty\delta_\epsilon(t-a)=1$ para qualquer $\epsilon>0$. A figura \ref{fig_delta_dirac} apresenta o gráfico de $\delta_\epsilon(t-a)$ para $a>0$ e $\epsilon=1$, $\epsilon=\frac{1}{2}$, $\epsilon=\frac{1}{4}$, $\epsilon=\frac{1}{8}$ e $\epsilon=\frac{1}{12}$.
+A função que representa uma grande força instantânea é chamada de {\bf função impulso} ou {\bf função Delta de Dirac} e pode ser definida pelo limite das funções pulsos:
+\begin{equation}
+\delta(t-a)=\lim_{\epsilon\to 0}\delta_\epsilon(t-a).
+\end{equation}
+Este limite não pode ser interpretado pontualmente, isto é, como o limite usual de funções reais, mas apenas no contexto de uma integral, como veremos.
+A figura \ref{fig_delta_dirac} apresenta o gráfico de $\delta_\epsilon(t-a)$ quando $\epsilon$ diminui e uma representação gráfica para $\delta(t-a)$.
+
+  
+\begin{figure}[!ht]
+\begin{center}
+
+\includegraphics{figs/figura_1}\hspace{20pt}
+\includegraphics{figs/figura_2}\hspace{20pt}
+\includegraphics{figs/figura_3}
+
+\includegraphics{figs/figura_4}\hspace{20pt}
+\includegraphics{figs/figura_5}\hspace{20pt}
+\includegraphics{figs/figura_6}
+\end{center}
+\caption{\label{fig_delta_dirac}}
+\end{figure}
+
+{\bf Obs:}A função delta de Dirac pode ser definida como limite de outras sequências de funções com propriedades análogas a sequência de pulsos. Por exemplo, podemos definir $\delta(t)$ como limite das funções
+\begin{equation}
+f_\epsilon(t)=\frac{1}{\epsilon\sqrt{\pi}}e^{-\frac{t^2}{\epsilon^2}}
+\end{equation}
+
+
+
+A função Impulso é zero em todo ponto, exceto em $t=a$:
+\begin{equation}
+\delta(t-a)=\left\{\begin{array}{ll}0,&t\neq a\\\infty,&t=a  \end{array}\right.
+\end{equation}
+e
+\begin{equation}
+\int_{-\infty}^\infty\delta(t-a)dt=1
+\end{equation}
+A função Delta de Dirac deve ser sempre compreendida como o limite de funções reais no contexto de uma integração, isto conduz à chamada  {\bf propriedade da filtragem}, que define totalmente a Delta da Dirac:
+Se $f(t)$ for um função contínua em torno de $t=a$, então
+\begin{equation}{\label{prop_filtragem_dirac}}
+\int_{-\infty}^\infty \delta(t-a)f(t)dt=f(a). 
+\end{equation}
+Para chegar a esta conclusão, definimos $F(t)=\int_a^t f(\tau)d\tau$ e calculamos:
+\begin{eqnarray*}
+\int_{-\infty}^\infty \delta(t-a)f(t)dt&=&\lim_{\varepsilon\to 0+}
+\int_{-\infty}^\infty \delta_\varepsilon(t-a)f(t)dt\\
+&=&\frac{1}{2\varepsilon}\int_{-\varepsilon}^\varepsilon f(t)dt\\
+&=&\frac{F(\varepsilon)-F(-\varepsilon)}{2\varepsilon}\\
+&=&F'(0)=f(a).
+\end{eqnarray*}
+\subsection{Delta de Dirac como derivada distribucional da função Heaviside}
+Na equação (\ref{def_delta_dirac}) definimos a função Delta de Dirac como
+\begin{equation}
+\delta(t-a)=\lim_{\epsilon\to 0}\frac{1}{2\epsilon}\left(u(t-(a-\epsilon))-u(t-(a+\epsilon))\right).
+\end{equation}
+Por outro lado, usamos a definição de derivada para escrever
+\begin{equation}
+\lim_{\epsilon\to 0}\frac{1}{2\epsilon}\left(u((t-a)+\epsilon))-u((t-a)-\epsilon))\right)=\frac{d}{dt}u(t-a)
+\end{equation}
+ou seja,
+\begin{equation}
+\delta(t-a)=\frac{d}{dt}u(t-a).
+\end{equation}
+Observe que as funções de Heaviside e de Dirac não são funções no sentido do cálculo diferencial e integral. Naturalmente, a derivada acima também vale somente num sentido generalizado, mas é coerente quando olhamos a função de Heaviside como limite de funções rampas (ver figura \ref{fig_Heaviside_1}), pois na origem a derivada tende ao infinito.
+A transformada de Laplace de função Delta de Dirac é obtido pela propriedade da filtragem dada na equação (\ref{prop_filtragem_dirac}):
+\begin{equation}{\label{prop_trans_delta_dirac}}
+\mathcal{L}\{\delta(t-a)\}=\int_0^\infty \delta(t-a)e^{-st}dt=e^{-as}.
+\end{equation}
+
+
+\section{Circuto RLC}
+
+
+\section{Aplicação: circuito RLC}{\label{sec_circ_2}}
+Considere o circuito Resistor/Capacitor/Indutor representado na figura \ref{fig_circ_2} com uma tensão $V(t)$ aplicada do tipo pulso,
+\begin{equation}
+V(t)=V_0\left(u(t-a)-u(t-b)\right).
+\end{equation}
+\begin{figure}[!ht]
+\begin{center}
+
+\includegraphics{figs/figura_7_RLC}\end{center}
+\caption{\label{fig_circ_2}}
+\end{figure} 
+O modelo para a corrente $i(t)$ obedece a lei de Kirchoff:
+\begin{equation}{\label{modelo_corrente}}
+Li'(t)+ Ri(t)+\frac{1}{C}q(t)=V_0\left(u(t-a)-u(t-b)\right),
+\end{equation}
+onde $q(t)$ é a carga no capacitor, $\frac{1}{C}q(t)$ é a tensão no capacitor de capacitância $C$, $Ri(t)$ é a tensão no resistor de resistência $R$ e $Li'(t)$ é a tensão no indutor de indutância $L$. Considere as condições iniciais $i(0)=0$ e $q(0)=0$.
+Dado que $\frac{dq(t)}{dt}=i(t)$, derivamos a equação do circutio para obter a seguinte equação diferencial:
+\begin{equation}{\label{modelo_corrente_2}}
+Li''(t)+ Ri'(t)+\frac{1}{C}i(t)=V_0\left(\delta(t-a)-\delta(t-b)\right),
+\end{equation}
+onde usamos que a derivada da função de Heaviside é a função delta de Dirac. As condições iniciais para a equação (\ref{modelo_corrente_2}) são $i'(0)=0$ e $i(0)=0$. Com o objetivo de resolver a problema de valor inicial, aplicamos a transformada de Laplace para obter a equação subsidiária
+\begin{equation*}
+Ls^2I(s)+ RsI(s)+\frac{1}{C}I(s)=V_0\left(e^{-as}-e^{-bs}\right),
+\end{equation*}
+que tem solução
+
+
+\begin{eqnarray*}
+I(s)&=&\frac{V_0\left(e^{-as}-e^{-bs}\right)}{Ls^2+Rs+\frac{1}{C}}\\
+&=&\frac{1}{L}\frac{V_0\left(e^{-as}-e^{-bs}\right)}{\left(s+\frac{R}{2L}\right)^2-\left(\frac{R}{2L}\right)^2+\frac{1}{LC}}\\
+&=&\frac{V_0}{L}\left[\frac{e^{-as}}{\left(s+\frac{R}{2L}\right)^2+\eta}-\frac{e^{-bs}}{\left(s+\frac{R}{2L}\right)^2+\eta}\right]
+\end{eqnarray*}
+onde
+\begin{equation}
+\eta=\frac{1}{LC}-\left(\frac{R}{2L}\right)^2.
+\end{equation}
+Vamos exemplificar os casos subamortecido, superamortecido e criticamente amortecido tomando $V_0=10V$, $a=1$ e $b=5$:
+\begin{itemize}
+ \item Caso subamortecido ($\eta>0$): escolhemos o caso onde $L=1\ \!$H, $C=\frac{1}{10}\ \!$F e $R=2\Omega$. Nesse caso
+ \begin{equation}
+ I(s)=10\left[\frac{e^{-s}}{\left(s+1\right)^2+9}-\frac{e^{-5s}}{\left(s+1\right)^2+9}\right].
+ \end{equation}
+ Logo,
+ \begin{equation}
+ i(t)=\frac{10}{3}\left(u(t-1)e^{-(t-1)}\sin\left(3 (t-1)\right)-u(t-5) e^{-(t-5)}\sin\left(3 (t-5)\right)\right).
+ \end{equation}
+ O gráfico da corrente é apresentado na figura \ref{fig_circ_RCL_1}.
+\begin{figure}[!ht]
+\begin{center}
+
+\includegraphics{figs/figura_8}\end{center}
+\caption{\label{fig_circ_RCL_1}}
+\end{figure}
+ \item Caso superamortecido ($\eta<0$): escolhemos o caso onde $L=1\ \!$H, $C=1\ \!$F e $R=4\Omega$. Nesse caso
+ \begin{equation}
+ I(s)=10\left[\frac{e^{-s}}{\left(s+2\right)^2-3 }-\frac{e^{-5s}}{\left(s+2\right)^2-3}\right].
+ \end{equation}
+ Logo,
+ \begin{eqnarray*}
+ i(t)&=&10\left(u(t-1)\frac{e^{-2(t-1)}}{ \sqrt{3}}\sinh\left(\sqrt{3} (t-1)\right)-u(t-5)\frac{e^{-2(t-5)}}{\sqrt{3} }\sinh\left(\sqrt{3}  (t-5)\right)\right)\\
+ &=&\frac{5}{\sqrt{3}}u(t-1)\left(e^{\left(\sqrt{3}-2\right) (t-1)}-e^{-\left(\sqrt{3}+2\right) (t-1)}\right)+\\
+ &+&\frac{5}{\sqrt{3}}u(t-5)\left(e^{\left(\sqrt{3}-2\right) (t-5)}-e^{-\left(\sqrt{3}+2\right) (t-5)}\right)
+ \end{eqnarray*}
+ O gráfico da corrente é apresentado na figura \ref{fig_circ_RCL_2}.
+\begin{figure}[!ht]
+\begin{center}
+
+\includegraphics{figs/figura_9}\end{center}
+\caption{\label{fig_circ_RCL_2}}
+\end{figure}
+\item Caso criticamente amortecido ($\eta=0$): escolhemos o caso onde $L=1\ \!$H, $C=1\ \!$F e $R=2\Omega$. Nesse caso
+ \begin{equation}
+ I(s)=10\left[\frac{e^{-s}}{\left(s+1\right)^2}-\frac{e^{-5s}}{\left(s+1\right)^2}\right].
+ \end{equation}
+ Logo,
+ \begin{equation}
+ i(t)=10\left(u(t-1)e^{-(t-1)} (t-1)-u(t-5)e^{-(t-5)} (t-5)\right).
+ \end{equation}
+O gráfico da corrente é apresentado na figura \ref{fig_circ_RCL_3}.
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics{figs/figura_10}\end{center}
+\caption{\label{fig_circ_RCL_3}}
+\end{figure}
+\end{itemize}
+
   \end{document}
   
