--- a/notas_laplace.tex
+++ b/notas_laplace.tex
@@ -509,11 +509,14 @@ Dem: Seja $g(t)=\int_0^tf(\tau)d\tau$. Então $g'(t)=f(t)$. Aplicamos a propried
  \delta(t-a)=\frac{d}{dt}u(t-a).
  \end{equation}
  Observe que as funções de Heaviside e de Dirac não são funções no sentido do cálculo diferencial e integral. Naturalmente, a derivada acima também vale somente num sentido generalizado, mas é coerente quando olhamos a função de Heaviside como limite de funções rampas (ver figura \ref{fig_Heaviside_1}), pois na origem a derivada tende ao infinito.
-% A transformada de Laplace de função Delta de Dirac é obtido pela propriedade da filtragem dada na equação (\ref{prop_filtragem_dirac}):
-% \begin{equation}{\label{prop_trans_delta_dirac}}
-% \mathcal{L}\{\delta(t-a)\}=\int_0^\infty \delta(t-a)e^{-st}dt=e^{-as}.
-% \end{equation}
-% 
+ A transformada de Laplace de função Delta de Dirac é obtido pela propriedade da filtragem dada na equação (\ref{prop_filtragem_dirac}):
+ \begin{equation}{\label{prop_trans_delta_dirac}}
+ \mathcal{L}\{\delta(t-a)\}=\int_0^\infty \delta(t-a)e^{-st}dt=e^{-as}.
+ \end{equation}
+
+ 
+ 
+ % 
 % 
 % \section{Circuto RLC}
 % 
