--- a/notas_laplace.tex
+++ b/notas_laplace.tex
@@ -671,76 +671,195 @@ O gráfico da corrente é apresentado na figura \ref{fig_circ_RCL_3}.
 \end{enumerate}
 %                             
 %                             
+
+\chapter{Dia 30 de setembro}
 %                             
-% \section{Cálculo da deflexão em vigas sujeitas a cargas concentradas}
-% 
-% Considere uma viga elástica horizontal de comprimento $L$ sob a ação de forças verticais. Colocamos o eixo horizontal $x$ com origem no extremo a esquerda da viga e, portanto, $x=L$ é o outro extremo. Supomos que a viga está sujeita a uma carga $W(x)$ que provoca uma deflexão em cada ponto $x\in[0,L]$. A modelo para esse fenômeno é dado pela equação de Euler-Bernoulli:
-% \begin{equation}
-% \label{eq}\frac{d^4}{dx^4}y(x)=\frac{1}{EI}W(x).
-% \end{equation}
-% onde $E$ é o módulo de Young, $I$ é o momento de inércia da viga.
-% 
-% 
-% 
-% Consideraremos aqui uma viga engastada, ou seja: \begin{equation}y(0)=y'(0)=y(L)=y'(L)=0.\end{equation}
-% A carga está concentrada na posição $x=\frac{L}{3}$ e tem intensidade $P_0$, sendo modelada pela seguinte expressão:
-% \begin{equation}W(x)=P_0\delta\left(x-\frac{L}{3}\right).\end{equation}
-% Aplicando a transformada de Laplace em (\ref{eq}) e usando o fato que $\mathcal{L}\left(\delta\left(x-\frac{L}{3}\right)\right)=e^{-\frac{L}{3}s}$, obtemos
-% \begin{equation}s^4Y(s)-s^3y(0)-s^2y'(0)-sy''(0)-y'''(0)=\frac{P_0}{EI}e^{-\frac{L}{3}s}\end{equation}
-% Substituimos $y(0)=y'(0)=0$, $y''(0)=C_1$ e $y'''(0)=C_2$ onde $C_1$ e $C_2$ são constantes a determinar:
-% \begin{equation}s^4Y(s)-sC_1-C_2=\frac{P_0}{EI}e^{-\frac{L}{3}s}\end{equation}
+\section{Cálculo da deflexão em vigas sujeitas a cargas concentradas}
+
+Ver \url{https://pt.wikipedia.org/wiki/Modelo_de_viga_de_Euler-Bernoulli}
+
+Considere uma viga elástica horizontal de comprimento $L$ sob a ação de forças verticais. Colocamos o eixo horizontal $x$ com origem no extremo a esquerda da viga e, portanto, $x=L$ é o outro extremo. Supomos que a viga está sujeita a uma carga $W(x)$ que provoca uma deflexão em cada ponto $x\in[0,L]$. A modelo para esse fenômeno é dado pela equação de Euler-Bernoulli:
+\begin{equation}
+\label{eq}\frac{d^4}{dx^4}y(x)=\frac{1}{EI}W(x).
+\end{equation}
+onde $E$ é o módulo de Young, $I$ é o momento de inércia da viga.
+
+
+
+Consideraremos aqui uma viga engastada, ou seja: \begin{equation}y(0)=y'(0)=y(L)=y'(L)=0.\end{equation}
+A carga está concentrada na posição $x=\frac{L}{3}$ e tem intensidade $P_0$, sendo modelada pela seguinte expressão:
+\begin{equation}W(x)=P_0\delta\left(x-\frac{L}{3}\right).\end{equation}
+Aplicando a transformada de Laplace em (\ref{eq}) e usando o fato que $\mathcal{L}\left(\delta\left(x-\frac{L}{3}\right)\right)=e^{-\frac{L}{3}s}$, obtemos
+\begin{equation}s^4Y(s)-s^3y(0)-s^2y'(0)-sy''(0)-y'''(0)=\frac{P_0}{EI}e^{-\frac{L}{3}s}\end{equation}
+ Substituimos $y(0)=y'(0)=0$, $y''(0)=C_1$ e $y'''(0)=C_2$ onde $C_1$ e $C_2$ são constantes a determinar:
+ \begin{equation}s^4Y(s)-sC_1-C_2=\frac{P_0}{EI}e^{-\frac{L}{3}s}\end{equation}
 % finalmente:
-% \begin{equation}Y(s)=\frac{C_1}{s^3}+\frac{C_2}{s^4}+\frac{P_0}{EI}\frac{e^{-\frac{L}{3}s}}{s^4}\end{equation}
-% e recuperamos a solução do domínio $x$ através da transformada inversa de Laplace:
-% \begin{equation}y(x)=\frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3+\frac{P_0}{EI}\frac{(x-L/3)^3}{3!}u(x-L/3).\end{equation}
-% A expressão para $y(x)$ pode ser escrita como função definida por partes na forma:
-% \begin{equation}y(x)=\left\{\begin{array}{ll}\frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3,&0\leq x\leq\frac{L}{3} \\ \frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3+\frac{P_0}{EI}\frac{(x-L/3)^3}{3!},&\frac{L}{3}<x\leq L .\end{array}\right.\end{equation}
-% Para calcular o valor das constantes $C_1$ e $C_2$ calculamos  $y(L)$ e $y'(L)$ usando a segunda parte da função $y(x)$:
-% \begin{eqnarray*}
-% 0=y(L)&=&\frac{C_1}{2}L^2+\frac{C_2}{6}L^3+\frac{4}{81}\frac{P_0}{EI}L^3\\
-% 0=y'(L)&=&C_1 L+\frac{C_2}{2}L^2+\frac{2}{9}\frac{P_0}{EI}L^2
-% \end{eqnarray*}
-% Colocando na forma matricial:
-% \begin{equation}\left[\begin{array}{cc}
-% \frac{L^2}{2} & \frac{L^3}{6}\\
-% L & \frac{L^2}{2}\\
-% \end{array}
-% \right]\left[\begin{array}{c}
-% C_1\\
-% C_2\end{array}
-% \right]=\left[\begin{array}{c}
-% -\frac{4}{81}\frac{P_0}{EI}L^3\\
-% -\frac{2}{9}\frac{P_0}{EI}L^2\end{array}.
-% \right]
-% \end{equation}
-%  Invertemos a matriz do sistema para obter as constantes $C_1$ e $C_2$:
-% \begin{equation}\left[\begin{array}{c}
-% C_1\\
-% C_2\end{array}
-% \right]=
-% \frac{12}{L^4}
-% \left[\begin{array}{cc}
-% \frac{L^2}{2} & -\frac{L^3}{6}\\
-% -L & \frac{L^2}{2}\\
-% \end{array}
-% \right]\left[\begin{array}{c}
-% -\frac{4}{81}\frac{P_0}{EI}L^3\\
-% -\frac{2}{9}\frac{P_0}{EI}L^2\end{array}
-% \right],
-% \end{equation}
-% o que resulta em $C_1=\frac{4P_0 L}{27EI}$ e $C_2=-\frac{20P_0 }{27EI}$. A figura \ref{viga} apresenta o gráfico da função $y(x)$ quando $L=5$ e $\frac{P_0}{EI}=1$.
-% \begin{figure}[!ht]
-% \begin{center}
-% 
-% \includegraphics{figs/figura_11}\end{center}
-% \caption{\label{viga}}
-% \end{figure}
+ \begin{equation}Y(s)=\frac{C_1}{s^3}+\frac{C_2}{s^4}+\frac{P_0}{EI}\frac{e^{-\frac{L}{3}s}}{s^4}\end{equation}
+ e recuperamos a solução do domínio $x$ através da transformada inversa de Laplace:
+ \begin{equation}y(x)=\frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3+\frac{P_0}{EI}\frac{(x-L/3)^3}{3!}u(x-L/3).\end{equation}
+ A expressão para $y(x)$ pode ser escrita como função definida por partes na forma:
+ \begin{equation}y(x)=\left\{\begin{array}{ll}\frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3,&0\leq x\leq\frac{L}{3} \\ \frac{C_1}{2!}x^2+\frac{C_2}{3!}x^3+\frac{P_0}{EI}\frac{(x-L/3)^3}{3!},&\frac{L}{3}<x\leq L .\end{array}\right.\end{equation}
+ Para calcular o valor das constantes $C_1$ e $C_2$ calculamos  $y(L)$ e $y'(L)$ usando a segunda parte da função $y(x)$:
+ \begin{eqnarray*}
+ 0=y(L)&=&\frac{C_1}{2}L^2+\frac{C_2}{6}L^3+\frac{4}{81}\frac{P_0}{EI}L^3\\
+ 0=y'(L)&=&C_1 L+\frac{C_2}{2}L^2+\frac{2}{9}\frac{P_0}{EI}L^2
+ \end{eqnarray*}
+ Colocando na forma matricial:
+ \begin{equation}\left[\begin{array}{cc}
+ \frac{L^2}{2} & \frac{L^3}{6}\\
+L & \frac{L^2}{2}\\
+ \end{array}
+ \right]\left[\begin{array}{c}
+ C_1\\
+ C_2\end{array}
+\right]=\left[\begin{array}{c}
+-\frac{4}{81}\frac{P_0}{EI}L^3\\
+-\frac{2}{9}\frac{P_0}{EI}L^2\end{array}.
+\right]
+\end{equation}
+ Invertemos a matriz do sistema para obter as constantes $C_1$ e $C_2$:
+\begin{equation}\left[\begin{array}{c}
+C_1\\
+C_2\end{array}
+\right]=
+\frac{12}{L^4}
+\left[\begin{array}{cc}
+\frac{L^2}{2} & -\frac{L^3}{6}\\
+-L & \frac{L^2}{2}\\
+\end{array}
+\right]\left[\begin{array}{c}
+-\frac{4}{81}\frac{P_0}{EI}L^3\\
+-\frac{2}{9}\frac{P_0}{EI}L^2\end{array}
+\right],
+\end{equation}
+ o que resulta em $C_1=\frac{4P_0 L}{27EI}$ e $C_2=-\frac{20P_0 }{27EI}$. A figura \ref{viga} apresenta o gráfico da função $y(x)$ quando $L=5$ e $\frac{P_0}{EI}=1$.
+ \begin{figure}[!ht]
+ \begin{center}
+% % 
+ \includegraphics{figs/figura_11}\end{center}
+ \caption{\label{viga}}
+ \end{figure}
+% % 
+% % 
+ \section{Aplicação: metabolismo de uma medicação}
+Durante um período de consumo de uma medicação, a concentração da substância ingerida na corrente sanguinea evolui segundo um modelo simples da seguinte forma:
+\begin{itemize}
+ \item No caso de ausência de dosagens, a variação da concentração é proporcional a concentração.
+ \item  O organismo metaboliza o medicamento com uma taxa $\tau$.
+  \item As doses de medicamento são liberadas e entra na corrente sanguinea instantaneamente e homogeneamente.
+\end{itemize}
+O modelo que descreve esse fenômeno é
+\begin{equation}
+c'(t)=-\frac{1}{\tau}c(t)+x(t),\qquad t>0
+\end{equation}
+onde $c(t)$ é a concentração e $x(t)$ representa a dosagem ao longo do tempo $t$. Em geral, as dosagens não são únicas e são tomadas periodicamente. Seja $c_0$ a concentração administrada instantaneamente a cada período $T$, então
+\begin{equation}
+x(t)=c_0\left(\delta(t)+\delta(t-T)+\delta(t-2T)+\delta(t-3T)+\cdots\right)
+\end{equation}
+ Supondo que $c(0)=0$, ou seja, inicialmente não havia substância no organismo, vamos calcular $c(t)$. 
+Começamos aplicando a transformada de Laplace:
+\begin{equation}
+sC(s)+\frac{1}{\tau}C(s)=c_0\left(1+e^{-sT}+e^{-2sT}+e^{-3sT}+\cdots\right)=c_0\sum_{n=0}^\infty\left( e^{-sT}\right)^n.
+\end{equation}
+e encontramos:
+\begin{equation}
+C(s)=\left(\frac{c_0}{ s+\frac{1}{\tau}}\right)\sum_{n=0}^\infty\left( e^{-sT}\right)^n.
+\end{equation}
 
+OBS: $$\mathcal{L}^{-1}\left\{\frac{c_0}{s+\frac{1}{\tau}}\right\}$$
 
+$$\mathcal{L}^{-1}\left\{\frac{1}{s+\frac{1}{\tau}}\right\}=e^{-\frac{t}{\tau}}$$
 
+Calculamos a transformada inversa usando a propriedade do deslocamento no eixo $s$.
+ \begin{eqnarray*}
+ c(t)&=&c_0\left(e^{-\frac{t}{\tau}}+e^{-\frac{t-T}{\tau}}u(t-T)+e^{-\frac{t-2T}{\tau}}u(t-2T)+e^{-\frac{t-3T}{\tau}}u(t-3T)+\cdots\right) \\
+ &=&c_0e^{-\frac{t}{\tau}}\left(1+e^{\frac{T}{\tau}}u(t-T)+e^{\frac{2T}{\tau}}u(t-2T)+e^{\frac{3T}{\tau}}u(t-3T)+\cdots\right)
+ \end{eqnarray*}
+  O gráfico da concentração é apresentado na figura \ref{concentracao}, usando $c_0=1$, $\tau=1$ e $T=1$.
+\begin{figure}[!ht]
+\begin{center}
+\includegraphics{figs/figura_dirac_12}\end{center}
+ \caption{\label{concentracao}}
+ \end{figure}
+ O salto em cada descontinuidade é exatamente $c_0$, pois os limites laterais são
+ \begin{eqnarray*}
+ \lim_{t\to nT^-}c(t)&=&\lim_{t\to nT^-}\left(c_0e^{-\frac{t}{\tau}}\left(1+e^{\frac{T}{\tau}}+e^{\frac{2T}{\tau}}+\cdots+ e^{\frac{(n-1)T}{\tau}}\right)\right)\\
+ &=&\left(c_0e^{-\frac{nT}{\tau}}\left(1+e^{\frac{T}{\tau}}+e^{\frac{2T}{\tau}}+\cdots+ e^{\frac{(n-1)T}{\tau}}\right)\right)\\
+&=&\left(c_0\left(e^{-\frac{nT}{\tau}}+e^{-\frac{(n-1)T}{\tau}}+e^{-\frac{(n-2)T}{\tau}}+\cdots+ e^{-\frac{T}{\tau}}\right)\right)\\
+\end{eqnarray*}
+e
+\begin{eqnarray*}
+\lim_{t\to nT^+}c(t)&=&\lim_{t\to nT^+}\left(c_0e^{-\frac{t}{\tau}}\left(1+e^{\frac{T}{\tau}}+e^{\frac{2T}{\tau}}+\cdots+ e^{\frac{(n-1)T}{\tau}}+ e^{\frac{nT}{\tau}}\right)\right)\\
+&=&\left(c_0e^{-\frac{nT}{\tau}}\left(1+e^{\frac{T}{\tau}}+e^{\frac{2T}{\tau}}+\cdots+ e^{\frac{(n-1)T}{\tau}}+ e^{\frac{nT}{\tau}}\right)\right)\\
+&=&\left(c_0\left(e^{-\frac{nT}{\tau}}+e^{-\frac{(n-1)T}{\tau}}+e^{-\frac{(n-2)T}{\tau}}+\cdots+ e^{-\frac{T}{\tau}}+1\right)\right),\\
+\end{eqnarray*}
+ que possuem diferença igual a $c_0$. 
+ Observe que quando calculamos o limite $\displaystyle \lim_{t\to 0^+}c(t)$ obtemos $c(0^+)=c_0$, valor diferente da condição inicial dada, que é $c(0)=0$. Apesar de parecer estranho, não está errado. Tudo é consequência da presença do Dirac em $t=0$, que produz uma discontinuidade na origem. Este assunto será discutido na seção \ref{problemas_na_origem}.
+% % 
+% % 
+% % 
+ \section{Problemas na origem}\label{problemas_na_origem}
+ Para entender melhor esse fenômeno, vamos considerar um problema um pouco mais simples, dado pelo seguinte problema de valor inicial:
+\begin{equation*}
+\left\{
+\begin{array}{rcl}
+y'(t)+y(t)&=&\delta(t)\\
+y(0)&=&0
+\end{array}
+\right.
+\end{equation*}
+Tomando a Transformada de Laplace, temos:
+\begin{equation*}
+sY(s)-y(0)+Y(s)=1
+\end{equation*}
+ou seja, $Y(s)=\frac{1}{s+1}$, o que implica
+\begin{equation}y(t)=e^{-t}.\end{equation}
+Observamos que $y(0)=1\neq 0$, ou seja, a condição inicial não é satisfeita.
+Para entendermos o que está acontecendo, devemos lembrar que a Transformada de Laplace só produz a solução para $t>0$ e interpretar $y(t)$ como
+\begin{equation}y(t)=u(t)e^{-t}.\end{equation}
+Desta forma $y(0)$ simplesmente não está definido. De fato, para compreender esse comportamento, vamos definir um problema auxiliar colocando no lugar da função delta de Dirac uma função pulso:
+\begin{equation*}
+\left\{
+\begin{array}{rcl}
+y'(t)+y(t)&=&\frac{u(t)-u(t-\varepsilon)}{\varepsilon}\\
+y(0)&=&0
+\end{array}
+\right.
+\end{equation*}
+onde $\varepsilon$ é uma constante positiva pequena. Sabemos que o termo \begin{equation}\frac{u(t)-u(t-\varepsilon)}{\varepsilon}\end{equation} converge para $\delta(t)$ quando $\varepsilon \to 0+$. Aplicando a Transformada de Laplace e resolvendo para $Y(s)$, temos:
+\begin{equation}Y(s)=\frac{1}{s(s+1)}\frac{1-e^{-\varepsilon s}}{\varepsilon}=\left(\frac{1}{s}-\frac{1}{s+1}\right)\frac{1-e^{-\varepsilon s}}{\varepsilon},\end{equation}
+ou seja,
+\begin{equation}y(t)=\frac{1-e^{-t}}{\varepsilon}u(t)-u(t-\varepsilon)\frac{1-e^{-(t-\varepsilon)}}{\varepsilon}.\end{equation}
+Esta solução pode ser escrita como uma função contínua:
+\begin{equation}y(t)=\left\{\begin{array}{ll}
+0,&t\leq 0,\\~\\
+\frac{1-e^{-t}}{\varepsilon},&0<t\leq \varepsilon,\\~\\
+\frac{e^{\varepsilon}-1}{\varepsilon}~\!
+e^{-t},&t\geq \varepsilon.
+\end{array}
+\right.\end{equation}
+Para $\varepsilon>0$ pequeno podemos usar a seguinte aproximação:
+\begin{equation}e^t=1+t+\frac{t^2}{2}+\frac{t^3}{3!}+\ldots \approx 1+t\end{equation}
+Assim, temos:
+\begin{equation}y(t)\approx\left\{\begin{array}{ll}
+0,&t\leq 0,\\~\\
+\frac{t}{\varepsilon},&0<t\leq \varepsilon,\\~\\
+e^{-t},&t\geq \varepsilon.
+\end{array}
+\right.\end{equation}
+Ou seja, existe uma pequena região de transição entre $0$ e $\varepsilon$ onde a solução $y(t)$ sobe rapidamente. O gráfico apresentado na figura \ref{concentracao_2} mostra o comportamento de $y(t)$ para $\varepsilon=0.2$, $\varepsilon=0.1$ e $\varepsilon=0.05$ em azul, vermelho e verde, respectivamente, assim como a solução limite $e^{-t}u(t)$ em preto.
+\begin{figure}[!ht]
+\begin{center}
 
+\includegraphics{figs/figura_dirac_13} \end{center}
+\caption{\label{concentracao_2}}
+ \end{figure}
+ 
 
-                            
-                            
+% % 
+% % 
+% % 
+% %                             
+% %                             
 \end{document}
   
